--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@
 @import 'modal';
 @import 'purchase';
 @import 'itemchooser';
+@import 'icons';
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap');
 .body{
     display: flex;
