--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,6 +9,7 @@
 @import 'purchase';
 @import 'itemchooser';
 @import 'icons';
+@import 'comingsoon';
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap');
 .body{
     display: flex;
