--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,12 +11,17 @@
 @import 'icons';
 @import 'comingsoon';
 @import 'labels';
+@import 'flicking';
+@import 'login';
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap');
 .body{
     display: flex;
     height: 100%;
     width: 100%;
     flex-direction: column;
+}
+.whitesvg svg{
+    color: $white !important;
 }
 .person-title{
         font-family: $family1;
