--- a/styles/icons.scss
+++ b/styles/icons.scss
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    transition: border 0.25 ease-in-out;
     svg{
         font-size: 36px;
         color: $error;
@@ -14,6 +15,13 @@
 }
 
 .moodicon-wraper{
+    &.active > .moodicon{
+        border: 2px solid $error;
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 8px;
     span{
         font-family: $family1;
         color: $dark;
