--- a/styles/inputs.scss
+++ b/styles/inputs.scss
@@ -1,5 +1,5 @@
 .binput{
-    background: $dark3;
+    background: $dark3 !important;
     border-radius: 80px;
     padding: 0px 0.8rem;
     max-width: 300px;
