--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -38,3 +38,44 @@
     }
 
 }
+
+.info-modal{
+    background: $dark3 !important;
+    border-radius: 16px !important;
+    .with-label{
+        margin-top: 40px;
+    }
+    .input-wrapper{
+        margin-top: 8px;
+        background: #ECF3F6;
+        border: 1px solid #D5D6D5;
+        box-sizing: border-box;
+        border-radius: 5px;
+    }
+    .input-wrapper:hover, .input-wrapper > input:hover{
+        border-color:#D5D6D5 !important;
+        background: white !important;
+    }
+    .content{
+        margin: 0 auto !important;
+    }
+}
+.info-modal-title{
+    font-weight: bold !important;
+    font-size: 20px !important;
+    line-height: 23px !important;
+    color: $white !important;
+}
+.info-modal-subtitle{
+    font-size: 12px !important;
+    line-height: 14px !important;
+    color: $white !important;
+    padding: 24px 48px;
+}
+.info-drawer-footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 32px;
+    width: 100%;
+}
