--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -79,3 +79,77 @@
     padding: 16px 32px;
     width: 100%;
 }
+.choice-modal{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(26,26,26,0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .modal-content{
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        height: 600px;
+        width: 300px;
+        background: $white;
+        padding: 16px;
+        border-radius: 10px;
+    }
+    .close{
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        cursor: pointer;
+    }
+    .title{
+        font-family: Helvetica;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 40px;
+        color: #101010;
+    }
+    .choice-span{
+        font-family: Helvetica;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 20px;
+        color: #101010;
+        opacity: 0.5;
+    }
+    z-index: 99999;
+}
+.or{
+    font-family: Helvetica;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #101010;
+    opacity: 0.5;
+    position: relative;
+    &::before{
+        position: absolute;
+        content: '';
+        opacity: 0.5;
+        width: 45%;
+        top: 50%;
+        left: -4px;
+        border: 1px solid #101010;
+    }
+    &::after{
+        position: absolute;
+        content: '';
+        opacity: 0.5;
+        width: 45%;
+        top: 50%;
+        right: -4px;
+        border: 1px solid #101010;
+    }
+}
