--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -87,7 +87,13 @@
     border: unset !important;
     color: white !important;
 }
-
+.choice-btn{
+    border-radius: 70px !important;
+    border: unset !important;
+    color: #101010 !important;
+    font-size: 16px !important;
+    font-weight: bolder !important;
+}
 .sticky-purchase{
     position: fixed;
     bottom: 0px;
@@ -107,5 +113,12 @@
         font-size: 20px !important;
         font-weight: bold !important;
         width: 250px !important;
+    }
+    @include for-desktop-up{
+        width: 200px;
+        background: transparent;
+        position: initial;
+        margin: 0 auto;
+        z-index: 1;
     }
 }
