--- a/styles/icons.scss
+++ b/styles/icons.scss
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    background: #404040;
     transition: border 0.25 ease-in-out;
     svg{
         font-size: 36px;
@@ -24,7 +25,7 @@
     margin: 8px;
     span{
         font-family: $family1;
-        color: $dark;
+        color: $white;
         font-size: 16px;
         font-weight: bolder;
     }
