--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -96,6 +96,11 @@
     font-size: 16px !important;
     font-weight: bolder !important;
 }
+.return-btn{
+    color: $white !important;
+    width: 48px !important;
+    height: 48px;
+}
 .sticky-purchase{
     position: fixed;
     bottom: 0px;
