--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap');
 .body{
     display: flex;
-    min-height: 100vh;
+    min-height: calc(100vh - 60px);
     height: 100%;
     width: 100%;
     flex-direction: column;
