--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -5,12 +5,12 @@
 
 .navbar{
     height: 60px;
-    margin: 0px 24px;
+    // margin: 0px 24px;
     padding: 8px !important;
     > svg{
-        max-width: 120px;
+        // max-width: 120px;
         width: 100%;
-        margin-bottom: auto;
+        // margin-bottom: auto;
     }
     button{
         margin: 0px 16px;
