--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -153,3 +153,8 @@
         border: 1px solid #101010;
     }
 }
+.loader-modal{
+    height: 180px !important;
+    justify-content: flex-start;
+    align-items: center;
+}
