--- a/styles/purchase.scss
+++ b/styles/purchase.scss
@@ -36,7 +36,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    max-width: 7200px;
+    max-width: 720px;
     margin: 0 auto;
     @include for-tablet-landscape-up{
         margin-top: 10vh;
@@ -47,5 +47,13 @@
     }
     @include for-phone-only{
         margin-bottom: 80px;
+        width: 100%;
+        padding: 0px 24px;
+        .order-summary-info{
+            margin-top: 24x;
+        }
     }
+}
+.order-summary-info{
+    width: 100%;
 }
