--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -126,7 +126,8 @@
         min-width: 200px !important;
         background: transparent;
         position: initial;
-        margin: 0 auto;
+        margin: 0 auto !important;
+        width: auto;
         z-index: 1;
     }
 }
