--- a/styles/starprofile.scss
+++ b/styles/starprofile.scss
@@ -1,5 +1,7 @@
 .starprofile-container{
     padding: 24px !important;
+    max-width: 720px !important;
+    width: 100%;
 }
 .starprofile-head{
     width: 600px;
