fixed small problems

--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -100,6 +100,7 @@
     color: $white !important;
     width: 48px !important;
     height: 48px;
+    cursor: pointer;
 }
 .sticky-purchase{
     position: fixed;
