--- a/styles/icons.scss
+++ b/styles/icons.scss
@@ -23,6 +23,7 @@
     flex-direction: column;
     align-items: center;
     margin: 8px;
+    cursor: pointer;
     span{
         font-family: $family1;
         color: $white;
