--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -8,6 +8,9 @@
         top: 1px !important;
         font-weight: bolder;
     }
+    .btn-loading i{
+        background-color: white !important;
+    }
 }
 .opbtn{
     background: transparent !important;    
