--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -93,10 +93,9 @@
         display: flex;
         position: relative;
         flex-direction: column;
-        height: 620px;
         width: 300px;
         background: $white;
-        padding: 16px;
+        padding: 32px 16px;
         border-radius: 10px;
     }
     .close{
